maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:22: error: type mismatch;
 found   : Unit
 required: Int
      return();
            ^PledgeMaze:28: error: value += is not a member of Int
            sommeAngle += 1;
                       ^PledgeMaze:32: error: value += is not a member of Int
              sommeAngle += 1;
                         ^PledgeMaze:36: error: value -= is not a member of Int
        } else { right(); sommeAngle -= 1;} 
                                     ^